Remove usage of PerfectScrollBar to try to fix issue with scroll on mobile

--- a/src/Mainscreen/Mainscreen.scss
+++ b/src/Mainscreen/Mainscreen.scss
@@ -25,6 +25,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow: scroll;
     color: $text-gray;
 }
 
